--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ body {
   align-items: center;
   text-align: center;
   border-radius: 10px;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -4px rgba(0,0,0,0.1);
 }
 
 .content {
